# opensesame3_plugin_markers

./: .gitignore  pyproject.toml  readme.md  setup.py  test.py  version_info.py
opensesame_extensions/markers_extension/: info.yaml  markers_extension.py
opensesame_extensions/markers_os3_extension/: markers_os3_extension.py
opensesame_plugins/markers/: example.py  info.yaml  marker_management.py  markers.md  markers.py  serial_lib.py
opensesame_plugins/markers_init/: info.yaml  marker_management.py  markers_init.md  markers_init.py
opensesame_plugins/markers_os3/markers_os3_init/: __init__.py  (+1 more)
opensesame_plugins/markers_os3_init/: markers_os3_init.py
opensesame_plugins/markers_os3_send/: markers_os3_send.md  markers_os3_send.py
opensesame_plugins/markers_send/: GS_timing.py  info.yaml  marker_management.py  markers_send.md  markers_send.py
samples/: flankertask_markers.osexp
test/: test_plugin.py
test/automated_test/: test_plugin.py
test/data/: fail_testmarkers_os3_invalid_device_tag.osexp  fail_testmarkers_os3_marker_duration_error.osexp  pass_testmarkers_os3_multiple_devices.osexp
test/device_test/: Test Markers OpenSesame3 plugin 20062024.docx  testmarkers_os3_basic_device_attached.osexp
test/timing_test/: os3_timing_test_parallel_first_3.acq  os3_timing_test_usbparmarker_first_1.acq  os3_timing_test_usbparmarker_first_2.acq  os3_timing_test_usbparmarker_first_3.acq  timing_test_plugin_parallel_port.osexp
timing_test/: TimingTestPlugin.osexp  os3_timing_test_parallel_first_1.acq  os3_timing_test_parallel_first_2.acq  timing_test_template.gtl
(+18 files in other folders)
